--- a/install
+++ b/install
@@ -1,1 +1,7 @@
-mvn package appassembler:assemble -Dmaven.test.skip=true
+
+installDir="$HOME/lib/release"
+
+
+mvn package appassembler:assemble -Dmaven.test.skip=true "-Dinstall.dir=$installDir"
+
+chmod +x "$installDir/bin/release"
